--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,17 +15,22 @@
         android:theme="@style/Theme.KotlinBasicsLearn"
         tools:targetApi="31">
         <activity
-            android:name=".diffutil.UserActivity"
-            android:exported="false" />
-        <activity
-            android:name=".mvvm.sample.DashboardActivity"
-            android:exported="true">
+            android:name=".coroutines.MainActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".diffutil.UserActivity"
+            android:exported="true"/>
+
+
+        <activity
+            android:name=".mvvm.sample.DashboardActivity"
+            android:exported="false" />
         <activity
             android:name=".mvp.MainActivity"
             android:exported="false" />
