feat: Implement production-level MVVM for product management
This commit introduces a production-level MVVM architecture for product management, including:

- **MVVM Architecture:**
    - Implements `ProductRepository` for data handling.
    - Uses `ProductViewModel` to manage UI-related data and business logic.
    - Employs `ProductViewModelFactory` for ViewModel instantiation.
- **Resource Class:**
    - Adds a `Resource` sealed class to represent data states (Loading, Success, Error).
- **CRUD Operations with MVVM:**
    - **Create:**
        - Fetches the latest category ID before creating a product.
        - `CreateProduct` now accepts a nullable `categoryId`.
    - **Read:**
        - Fetches and displays a list of products.
    - **Update:**
        - Updates existing products.
    - **Delete:**
        - Deletes products.
- **UI Enhancements:**
    - `Dashboard.kt` (production_level) for managing product CRUD operations.
    - `activity_dashboard4.xml` layout for the production-level product management screen.
    - Displays loading progress using a `ProgressBar`.
    - Handles UI updates based on `Resource` states.
- **Retrofit API Service:**
    - Adds `getCategories()` endpoint to `ApiService`.
    - `createProduct` in `ApiService` now returns `ProductResponse`.
- **Error Handling and Logging:**
    - Improved error handling in `ProductRepository`.
    - Added logging for API responses and errors.
- **Refactoring (mvvm.retrofit package):**
    - Introduced `ProductRepository`, `ProductViewModel`, and `ProductViewModelFactory` in the `mvvm.retrofit` package for an alternative MVVM implementation.
    - Created `Dashboard.kt` and `activity_dashboard3.xml` for this alternative implementation.
    - This version uses `LiveData` for individual operation results (e.g., `createProductResult`, `updateProductResult`).
- **AndroidManifest Changes:**
    - Sets `com.app.kotlinbasicslearn.mvvm.retrofit.Dashboard` as the launcher activity.
    - Marks `com.app.kotli

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,11 @@
         android:theme="@style/Theme.KotlinBasicsLearn"
         tools:targetApi="31">
         <activity
-            android:name=".coroutines.MainActivity"
-            android:exported="true" >
+            android:name=".mvvm.production_level.Dashboard"
+            android:exported="false" />
+        <activity
+            android:name=".mvvm.retrofit.Dashboard"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,10 +27,11 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".coroutines.MainActivity"
+            android:exported="false"></activity>
+        <activity
             android:name=".diffutil.UserActivity"
-            android:exported="true"/>
-
-
+            android:exported="true" />
         <activity
             android:name=".mvvm.sample.DashboardActivity"
             android:exported="false" />
