feat: Implement Stock News feature with MVVM, Room, and WorkManager (placeholder)
This commit introduces a new feature to display stock news, incorporating MVVM architecture, Room for local data persistence, and foundational elements for future WorkManager integration.

**Core Functionality:**

- **Stock News Display:**
    - Fetches stock news from an API (`https://stock.indianapi.in/news`).
    - Displays news articles in a RecyclerView using `StockNewsAdapter`.
    - Shows a progress bar while loading data.
- **Offline Support:**
    - Saves fetched news to a local Room database (`stock_news` table).
    - Loads news from the database if the device is offline.
- **MVVM Architecture:**
    - `NewsModel`: ViewModel responsible for fetching and managing news data.
    - `NewsRepository`: Handles data retrieval from API and Room database.
    - `NewsViewModelFactory`: Factory for creating `NewsModel` instances.
    - `Resources` sealed class: Manages data states (Loading, Success, Error) for news.
- **Network Handling:**
    - `NetworkUtils`: Checks for internet connectivity.
    - `ConnectionState` sealed class: Represents network availability.
    - Adapts data fetching based on network status.

**Key Components:**

- **API Integration:**
    - `RetrofitClient`: Singleton for Retrofit instance.
    - `NewsApiService`: Defines API endpoints for fetching news.
    - `StockNewsItem`, `StockNews`: Data models for API response.
- **Database:**
    - `RoomDb`: Abstract class for Room database.
    - `StockNewsDao`: Data Access Object for `stock_news` table.
    - `Converters`: Type converters for Room (e.g., for `List<String>`, `Category`).
- **UI:**
    - `StockNewsActivity`: Displays the list of news articles.
    - `activity_stock_news.xml`: Layout for the news screen.
    - `item_news_list.xml`: Layout for individual news items in the RecyclerView.
- **Application Class:**
    - `ProductApplication`: Initializes `NewsRepository` (and `ProductRepository`).

**Product 

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".ProductApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -15,10 +17,7 @@
         android:theme="@style/Theme.KotlinBasicsLearn"
         tools:targetApi="31">
         <activity
-            android:name=".mvvm.production_level.Dashboard"
-            android:exported="false" />
-        <activity
-            android:name=".mvvm.retrofit.Dashboard"
+            android:name=".workmanager.StockNewsActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,11 +26,17 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".mvvm.production_level.Dashboard"
+            android:exported="false" />
+        <activity
+            android:name=".mvvm.retrofit.Dashboard"
+            android:exported="false" />
+        <activity
             android:name=".coroutines.MainActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".diffutil.UserActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".mvvm.sample.DashboardActivity"
             android:exported="false" />
@@ -58,7 +63,7 @@
             android:exported="false" />
         <activity
             android:name=".digitalpassport.EditActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".datapassing.DataPassingLearning"
             android:exported="false" />
